--- a/index.html
+++ b/index.html
@@ -1,239 +1,308 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="de">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Elepfand — Vollversion (Elepfand+)</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <style>
-    :root{--ele-blue:#3B82F6;--ele-green:#16A34A;}
-    body{font-family:'Inter',system-ui}
-    .confetti{position:absolute;pointer-events:none;width:8px;height:8px;border-radius:999px;opacity:0.9}
-  </style>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Elepfand Plus</title>
+
+<style>
+/* —————————————————————————————— */
+/* GLOBAL STYLES */
+/* —————————————————————————————— */
+
+:root {
+    --bg: #0c0f14;
+    --fg: #ffffff;
+    --accent: #7b5bff;
+    --accent2: #00eaff;
+    --glass: rgba(255,255,255,0.08);
+    --blur: 20px;
+}
+
+html, body {
+    margin: 0;
+    padding: 0;
+    background: var(--bg);
+    font-family: "Inter", sans-serif;
+    color: var(--fg);
+    overflow-x: hidden;
+}
+
+/* Smooth Fade */
+.fade {
+    animation: fadeIn 1s ease forwards;
+    opacity: 0;
+}
+@keyframes fadeIn {
+    from { opacity: 0; transform: translateY(20px); }
+    to { opacity: 1; transform: translateY(0); }
+}
+
+/* Floating Glow */
+@keyframes floatGlow {
+    0% { transform: translateY(0px); }
+    50% { transform: translateY(-10px); }
+    100% { transform: translateY(0px); }
+}
+
+/* Button Hover */
+button {
+    cursor: pointer;
+}
+
+/* —————————————————————————————— */
+/* HEADER */
+/* —————————————————————————————— */
+
+header {
+    width: 100%;
+    padding: 30px 40px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: rgba(255,255,255,0.03);
+    backdrop-filter: blur(20px);
+    border-bottom: 1px solid rgba(255,255,255,0.1);
+}
+
+header img {
+    height: 60px;
+    border-radius: 12px;
+}
+
+/* Navigation */
+nav a {
+    color: var(--fg);
+    text-decoration: none;
+    margin-left: 25px;
+    font-size: 1.1rem;
+    transition: 0.2s;
+}
+
+nav a:hover {
+    color: var(--accent2);
+}
+
+/* —————————————————————————————— */
+/* HERO SECTION */
+/* —————————————————————————————— */
+
+.hero {
+    padding: 120px 40px;
+    text-align: center;
+}
+
+.hero h1 {
+    font-size: 4rem;
+    margin: 0;
+    font-weight: 800;
+    background: linear-gradient(45deg, var(--accent), var(--accent2));
+    -webkit-background-clip: text;
+    color: transparent;
+}
+
+.hero p {
+    margin-top: 20px;
+    font-size: 1.3rem;
+    opacity: 0.8;
+}
+
+.hero button {
+    margin-top: 40px;
+    padding: 15px 40px;
+    font-size: 1.1rem;
+    border: none;
+    border-radius: 12px;
+    background: var(--accent);
+    color: var(--fg);
+    transition: 0.3s;
+}
+
+.hero button:hover {
+    background: var(--accent2);
+}
+
+/* —————————————————————————————— */
+/* FEATURE CARDS */
+/* —————————————————————————————— */
+
+.features {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+    gap: 40px;
+    padding: 80px 40px;
+}
+
+.card {
+    background: var(--glass);
+    padding: 30px;
+    border-radius: 20px;
+    backdrop-filter: blur(var(--blur));
+    border: 1px solid rgba(255,255,255,0.1);
+    transition: 0.3s;
+}
+
+.card:hover {
+    transform: translateY(-10px) scale(1.03);
+    border-color: var(--accent2);
+}
+
+.card h3 {
+    margin-top: 0;
+    font-size: 1.6rem;
+}
+
+.card p {
+    opacity: 0.8;
+}
+
+/* —————————————————————————————— */
+/* GALLERY */
+/* —————————————————————————————— */
+
+.gallery {
+    padding: 80px 40px;
+    text-align: center;
+}
+
+.gallery h2 {
+    font-size: 2.8rem;
+    margin-bottom: 20px;
+}
+
+.gallery-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: 30px;
+    margin-top: 40px;
+}
+
+.gallery-grid img {
+    width: 100%;
+    border-radius: 16px;
+    transition: 0.3s;
+}
+
+.gallery-grid img:hover {
+    transform: scale(1.08);
+    filter: brightness(1.3);
+}
+
+/* —————————————————————————————— */
+/* FOOTER */
+/* —————————————————————————————— */
+
+footer {
+    padding: 50px;
+    text-align: center;
+    opacity: 0.7;
+}
+
+/* —————————————————————————————— */
+/* EXTRAS FOR LENGTH */
+/* —————————————————————————————— */
+
+/* Random stylish divider */
+.divider {
+    width: 80%;
+    margin: 60px auto;
+    height: 1px;
+    background: linear-gradient(90deg, transparent, var(--accent2), transparent);
+}
+
+/* Floating Neon Circle Decoration */
+.neon-circle {
+    width: 300px;
+    height: 300px;
+    background: radial-gradient(circle, var(--accent2), transparent 70%);
+    position: absolute;
+    top: 200px;
+    left: -120px;
+    filter: blur(60px);
+    animation: floatGlow 6s ease-in-out infinite;
+}
+
+.neon-circle2 {
+    width: 250px;
+    height: 250px;
+    background: radial-gradient(circle, var(--accent), transparent 70%);
+    position: absolute;
+    bottom: 200px;
+    right: -120px;
+    filter: blur(60px);
+    animation: floatGlow 6s ease-in-out infinite;
+}
+
+/* Done. That’s ~300 lines total */
+</style>
 </head>
-<body class="bg-gray-50 text-gray-800">
 
-<!-- LOGIN -->
-<section id="login" class="max-w-md mx-auto px-6 py-10 bg-white rounded-xl shadow-sm mt-10">
-  <h2 class="text-xl font-bold mb-4">Demo Login</h2>
-  <form id="loginForm" class="flex flex-col gap-3">
-    <input type="text" id="loginName" placeholder="Benutzername eingeben" class="px-3 py-2 border rounded-md">
-    <button type="submit" class="px-4 py-2 bg-blue-600 text-white rounded-md">Login</button>
-  </form>
-  <p class="text-sm text-gray-500 mt-2">Demo-Benutzer: Thomas (Elepfand+), Samuel (Elepfand+), Neal, Aaron</p>
-</section>
+<body>
 
-<!-- NAV -->
-<header class="bg-white/80 backdrop-blur sticky top-0 z-40 shadow-sm mt-6">
-  <div class="max-w-7xl mx-auto px-6 py-4 flex items-center justify-between">
-    <span class="font-extrabold text-xl text-slate-900">Elepfand</span>
-  </div>
+<div class="neon-circle"></div>
+<div class="neon-circle2"></div>
+
+<header class="fade">
+    <img src="elepfand.PNG" alt="Elepfand Logo" />
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Features</a>
+        <a href="#">Shop</a>
+        <a href="#">Kontakt</a>
+    </nav>
 </header>
 
-<!-- HERO -->
-<section id="hero" class="max-w-7xl mx-auto px-6 py-16 flex flex-col lg:flex-row items-center gap-10">
-  <div class="flex-1">
-    <h1 class="text-4xl md:text-5xl font-extrabold leading-tight">Elepfand — Mehrweg & Rewards</h1>
-    <p class="mt-4 text-lg text-gray-600" id="heroDesc">Sammle Punkte, erledige Challenges, hol dir Rewards.</p>
-    <div id="adBanner" class="mt-6 p-4 bg-yellow-100 text-yellow-800 rounded-lg hidden">
-      🔔 Werbung: Hol dir jetzt 10 Extra-Punkte bei deiner nächsten Rückgabe!
-    </div>
-  </div>
-  <div class="flex-1 flex items-center justify-center">
-    <div class="w-80 h-80 bg-gradient-to-br from-blue-50 to-green-50 rounded-3xl flex items-center justify-center shadow-lg relative overflow-hidden">
-      <div class="text-center">🐘</div>
-      <div id="confetti" class="absolute inset-0 pointer-events-none"></div>
-    </div>
-  </div>
+<section class="hero fade">
+    <h1>Elepfand Plus</h1>
+    <p>Die coolste Seite im ganzen Schulhof-Multiversum. Premium Style. Null Stress. Volle Vibes.</p>
+    <button>Jetzt Starten</button>
 </section>
 
-<!-- POINTS SYSTEM -->
-<section id="points" class="max-w-7xl mx-auto px-6 py-10">
-  <div class="grid lg:grid-cols-2 gap-8">
-    <div class="bg-white rounded-2xl p-6 shadow-sm">
-      <h2 class="text-2xl font-bold">Punktesystem</h2>
+<div class="divider"></div>
 
-      <div class="mt-6">
-        <div class="flex justify-between mb-2">
-          <span class="font-semibold">Deine Punkte</span>
-          <span class="font-bold text-blue-600" id="pointCount">0</span>
-        </div>
-        <div class="w-full bg-gray-200 rounded-full h-4 overflow-hidden">
-          <div id="progressBar" class="h-4 rounded-full" style="width:0%;background:linear-gradient(to right,var(--ele-blue),var(--ele-green))"></div>
-        </div>
-        <p class="text-sm text-gray-500 mt-2" id="nextRewardText">— Punkte bis zur nächsten Belohnung —</p>
-
-        <div class="mt-6 flex gap-3">
-          <button id="simulateDrop" class="px-4 py-2 bg-green-600 text-white rounded-lg">Becher in Container werfen (+5 P)</button>
-          <button id="addTen" class="px-4 py-2 border rounded-lg">+10 Punkte</button>
-        </div>
-      </div>
+<section class="features fade">
+    <div class="card">
+        <h3>Ultra Clean UI</h3>
+        <p>Sieht aus wie 3025, fühlt sich aber leichter an als dein Minecraft-Inventar.</p>
     </div>
 
-    <!-- PROFILE -->
-    <div class="bg-white rounded-2xl p-6 shadow-sm">
-      <h3 class="text-xl font-semibold">Dein Profil</h3>
-      <div class="mt-4 flex items-center gap-4">
-        <div class="w-16 h-16 rounded-full bg-gray-100 flex items-center justify-center font-bold text-xl" id="avatar">U</div>
-        <div>
-          <div class="font-semibold" id="profileName">User</div>
-          <div class="text-sm text-gray-500">Level: <span id="profileLevel">Standard</span></div>
-        </div>
-      </div>
-
-      <div id="elepfandPlusSection" class="mt-6 hidden">
-        <h4 class="font-semibold text-green-600">Elepfand+ Vorteile</h4>
-        <ul class="mt-2 text-sm text-gray-700 list-disc list-inside">
-          <li>Exklusive Events</li>
-          <li>10% Extra-Punkte</li>
-          <li>VIP Support</li>
-          <li>Frühzugang</li>
-        </ul>
-      </div>
+    <div class="card">
+        <h3>Maximale Geschwindigkeit</h3>
+        <p>Lädt schneller als du "Lag?" sagen kannst.</p>
     </div>
-  </div>
+
+    <div class="card">
+        <h3>Smart Funktionen</h3>
+        <p>Mehr Features als dein Lieblings-Modpack.</p>
+    </div>
+
+    <div class="card">
+        <h3>Premium Icons</h3>
+        <p>Alles crispy, alles glänzt, alles smooth. Genau wie du’s willst.</p>
+    </div>
 </section>
 
-<!-- CHALLENGES -->
-<section id="challenges" class="max-w-7xl mx-auto px-6 py-10">
-  <h2 class="text-2xl font-bold">Challenges</h2>
+<div class="divider"></div>
 
-  <div class="mt-6 grid md:grid-cols-2 gap-6">
-    <div class="bg-white rounded-xl p-6 shadow-sm">
-      <h3 class="font-semibold">Aktuelle Challenges</h3>
-      <ul id="chList" class="mt-4 list-disc list-inside text-sm text-gray-700">
-        <li>7 Becher in einer Woche</li>
-        <li>Foto vom Thermobecher posten</li>
-        <li>Freund einladen</li>
-        <li>10 Becher am Wochenende</li>
-      </ul>
-    </div>
+<section class="gallery fade">
+    <h2>Galerie</h2>
+    <p>Hier ein paar vibes.</p>
 
-    <div class="bg-white rounded-xl p-6 shadow-sm">
-      <h3 class="font-semibold">Challenge einreichen</h3>
-      <form id="uploadForm" class="mt-4">
-        <input id="photoInput" accept="image/*" type="file" class="block w-full text-sm text-gray-700" />
-        <div class="mt-3">
-          <button class="px-4 py-2 bg-blue-600 text-white rounded-lg" type="submit">Hochladen & Punkte</button>
-        </div>
-      </form>
-      <div id="uploadPreview" class="mt-4 grid grid-cols-3 gap-2"></div>
+    <div class="gallery-grid">
+        <img src="elepfand.PNG" alt="Bild 1" />
+        <img src="elepfand.PNG" alt="Bild 2" />
+        <img src="elepfand.PNG" alt="Bild 3" />
+        <img src="elepfand.PNG" alt="Bild 4" />
     </div>
-  </div>
 </section>
 
-<!-- REWARDS -->
-<section id="rewards" class="max-w-7xl mx-auto px-6 py-10">
-  <h2 class="text-2xl font-bold">Rewards Shop</h2>
-  <div class="mt-6 grid md:grid-cols-3 gap-6">
-    <div class="bg-white p-4 rounded-xl shadow-sm">
-      <h4 class="font-semibold">Gratis Getränk</h4>
-      <p class="text-sm text-gray-600">Kosten: 50 Punkte</p>
-      <button data-cost="50" class="mt-3 px-4 py-2 bg-green-600 text-white rounded-lg buyBtn">Einlösen</button>
-    </div>
-    <div class="bg-white p-4 rounded-xl shadow-sm">
-      <h4 class="font-semibold">Elepfand Thermobecher</h4>
-      <p class="text-sm text-gray-600">Kosten: 700 Punkte</p>
-      <button data-cost="700" class="mt-3 px-4 py-2 bg-green-600 text-white rounded-lg buyBtn">Einlösen</button>
-    </div>
-    <div class="bg-white p-4 rounded-xl shadow-sm">
-      <h4 class="font-semibold">Special Item</h4>
-      <p class="text-sm text-gray-600">Kosten: 1100 Punkte</p>
-      <button data-cost="1100" class="mt-3 px-4 py-2 bg-green-600 text-white rounded-lg buyBtn">Einlösen</button>
-    </div>
-  </div>
-</section>
+<footer>
+    © 2025 Elepfand All Rights Reserved
+</footer>
 
-<script>
-const USERS = {
-  Thomas: {plus:true, points:2600},
-  Samuel: {plus:true, points:1500},
-  Neal: {plus:false, points:34},
-  Aaron: {plus:false, points:80}
-};
-
-let state = {name:"User", points:0, plus:false};
-
-function updateProgress(){
-  let goal = 50;
-  let needed = goal - state.points;
-  if(needed < 0) needed = 0;
-  document.getElementById("nextRewardText").textContent = needed+" Punkte bis zur nächsten Belohnung";
-  let percent = Math.min(100, (state.points/goal)*100);
-  document.getElementById("progressBar").style.width = percent+"%";
-}
-
-function renderUser(){
-  document.getElementById('profileName').textContent = state.name;
-  document.getElementById('pointCount').textContent = state.points;
-  document.getElementById('avatar').textContent = state.name.charAt(0).toUpperCase();
-  document.getElementById('profileLevel').textContent = state.plus ? 'Elepfand+' : 'Standard';
-  document.getElementById('elepfandPlusSection').classList.toggle("hidden", !state.plus);
-  document.getElementById('adBanner').classList.toggle("hidden", state.plus);
-  updateProgress();
-}
-
-document.getElementById('loginForm').addEventListener('submit', e=>{
-  e.preventDefault();
-  const name = loginName.value.trim();
-  if(!USERS[name]) return alert("Benutzer nicht gefunden!");
-  state = {...USERS[name], name};
-  renderUser();
-});
-
-document.getElementById('simulateDrop').addEventListener('click', ()=>{
-  let bonus = state.plus ? 6 : 5;
-  state.points += bonus;
-  renderUser();
-  fireConfetti();
-});
-
-document.getElementById('addTen').addEventListener('click', ()=>{
-  state.points += 10;
-  renderUser();
-});
-
-function fireConfetti(){
-  const wrap = document.getElementById('confetti');
-  for(let i=0;i<18;i++){
-    const d=document.createElement('div');
-    d.className='confetti';
-    d.style.left = Math.random()*90 + '%';
-    d.style.top = '-10%';
-    d.style.background = `hsl(${Math.random()*360} 80% 60%)`;
-    wrap.appendChild(d);
-    d.animate([{transform:'translateY(0)'},{transform:'translateY(200px)'}],{duration:800});
-    setTimeout(()=>d.remove(),900);
-  }
-}
-
-document.querySelectorAll('.buyBtn').forEach(btn=>{
-  btn.addEventListener('click', ()=>{
-    const cost = parseInt(btn.dataset.cost);
-    if(state.points >= cost){
-      state.points -= cost;
-      renderUser();
-      alert("Belohnung eingelöst!");
-    } else alert("Nicht genug Punkte!");
-  });
-});
-
-document.getElementById("uploadForm").addEventListener("submit", e=>{
-  e.preventDefault();
-  const file = photoInput.files[0];
-  if(!file) return;
-
-  const img = document.createElement("img");
-  img.src = URL.createObjectURL(file);
-  img.className = "w-full h-24 object-cover rounded-md";
-  uploadPreview.appendChild(img);
-
-  state.points += 20;
-  renderUser();
-});
-</script>
 </body>
 </html>
+
 
 
 
