--- a/index.html
+++ b/index.html
@@ -1,307 +1,163 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="de">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Elepfand Plus</title>
-
-<style>
-/* —————————————————————————————— */
-/* GLOBAL STYLES */
-/* —————————————————————————————— */
-
-:root {
-    --bg: #0c0f14;
-    --fg: #ffffff;
-    --accent: #7b5bff;
-    --accent2: #00eaff;
-    --glass: rgba(255,255,255,0.08);
-    --blur: 20px;
-}
-
-html, body {
-    margin: 0;
-    padding: 0;
-    background: var(--bg);
-    font-family: "Inter", sans-serif;
-    color: var(--fg);
-    overflow-x: hidden;
-}
-
-/* Smooth Fade */
-.fade {
-    animation: fadeIn 1s ease forwards;
-    opacity: 0;
-}
-@keyframes fadeIn {
-    from { opacity: 0; transform: translateY(20px); }
-    to { opacity: 1; transform: translateY(0); }
-}
-
-/* Floating Glow */
-@keyframes floatGlow {
-    0% { transform: translateY(0px); }
-    50% { transform: translateY(-10px); }
-    100% { transform: translateY(0px); }
-}
-
-/* Button Hover */
-button {
-    cursor: pointer;
-}
-
-/* —————————————————————————————— */
-/* HEADER */
-/* —————————————————————————————— */
-
-header {
-    width: 100%;
-    padding: 30px 40px;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: rgba(255,255,255,0.03);
-    backdrop-filter: blur(20px);
-    border-bottom: 1px solid rgba(255,255,255,0.1);
-}
-
-header img {
-    height: 60px;
-    border-radius: 12px;
-}
-
-/* Navigation */
-nav a {
-    color: var(--fg);
-    text-decoration: none;
-    margin-left: 25px;
-    font-size: 1.1rem;
-    transition: 0.2s;
-}
-
-nav a:hover {
-    color: var(--accent2);
-}
-
-/* —————————————————————————————— */
-/* HERO SECTION */
-/* —————————————————————————————— */
-
-.hero {
-    padding: 120px 40px;
-    text-align: center;
-}
-
-.hero h1 {
-    font-size: 4rem;
-    margin: 0;
-    font-weight: 800;
-    background: linear-gradient(45deg, var(--accent), var(--accent2));
-    -webkit-background-clip: text;
-    color: transparent;
-}
-
-.hero p {
-    margin-top: 20px;
-    font-size: 1.3rem;
-    opacity: 0.8;
-}
-
-.hero button {
-    margin-top: 40px;
-    padding: 15px 40px;
-    font-size: 1.1rem;
-    border: none;
-    border-radius: 12px;
-    background: var(--accent);
-    color: var(--fg);
-    transition: 0.3s;
-}
-
-.hero button:hover {
-    background: var(--accent2);
-}
-
-/* —————————————————————————————— */
-/* FEATURE CARDS */
-/* —————————————————————————————— */
-
-.features {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-    gap: 40px;
-    padding: 80px 40px;
-}
-
-.card {
-    background: var(--glass);
-    padding: 30px;
-    border-radius: 20px;
-    backdrop-filter: blur(var(--blur));
-    border: 1px solid rgba(255,255,255,0.1);
-    transition: 0.3s;
-}
-
-.card:hover {
-    transform: translateY(-10px) scale(1.03);
-    border-color: var(--accent2);
-}
-
-.card h3 {
-    margin-top: 0;
-    font-size: 1.6rem;
-}
-
-.card p {
-    opacity: 0.8;
-}
-
-/* —————————————————————————————— */
-/* GALLERY */
-/* —————————————————————————————— */
-
-.gallery {
-    padding: 80px 40px;
-    text-align: center;
-}
-
-.gallery h2 {
-    font-size: 2.8rem;
-    margin-bottom: 20px;
-}
-
-.gallery-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-    gap: 30px;
-    margin-top: 40px;
-}
-
-.gallery-grid img {
-    width: 100%;
-    border-radius: 16px;
-    transition: 0.3s;
-}
-
-.gallery-grid img:hover {
-    transform: scale(1.08);
-    filter: brightness(1.3);
-}
-
-/* —————————————————————————————— */
-/* FOOTER */
-/* —————————————————————————————— */
-
-footer {
-    padding: 50px;
-    text-align: center;
-    opacity: 0.7;
-}
-
-/* —————————————————————————————— */
-/* EXTRAS FOR LENGTH */
-/* —————————————————————————————— */
-
-/* Random stylish divider */
-.divider {
-    width: 80%;
-    margin: 60px auto;
-    height: 1px;
-    background: linear-gradient(90deg, transparent, var(--accent2), transparent);
-}
-
-/* Floating Neon Circle Decoration */
-.neon-circle {
-    width: 300px;
-    height: 300px;
-    background: radial-gradient(circle, var(--accent2), transparent 70%);
-    position: absolute;
-    top: 200px;
-    left: -120px;
-    filter: blur(60px);
-    animation: floatGlow 6s ease-in-out infinite;
-}
-
-.neon-circle2 {
-    width: 250px;
-    height: 250px;
-    background: radial-gradient(circle, var(--accent), transparent 70%);
-    position: absolute;
-    bottom: 200px;
-    right: -120px;
-    filter: blur(60px);
-    animation: floatGlow 6s ease-in-out infinite;
-}
-
-/* Done. That’s ~300 lines total */
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Elepfand — Rewards & Rückgabe</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
+  <style>
+    body{font-family:'Inter'}
+    .confetti{position:absolute;width:8px;height:8px;border-radius:999px;pointer-events:none}
+  </style>
 </head>
+<body class="bg-gray-100 text-gray-900">
 
-<body>
-
-<div class="neon-circle"></div>
-<div class="neon-circle2"></div>
-
-<header class="fade">
-    <img src="elepfand.PNG" alt="Elepfand Logo" />
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Features</a>
-        <a href="#">Shop</a>
-        <a href="#">Kontakt</a>
-    </nav>
+<header class="bg-white shadow sticky top-0 z-50">
+  <div class="max-w-7xl mx-auto px-6 py-4 flex items-center gap-3">
+    <img src="elepfand.PNG" class="w-12 h-12 rounded" onerror="this.style.display='none'">
+    <h1 class="text-2xl font-extrabold">Elepfand</h1>
+  </div>
 </header>
 
-<section class="hero fade">
-    <h1>Elepfand Plus</h1>
-    <p>Die coolste Seite im ganzen Schulhof-Multiversum. Premium Style. Null Stress. Volle Vibes.</p>
-    <button>Jetzt Starten</button>
+<section class="max-w-7xl mx-auto px-6 py-10">
+  <div class="bg-white p-6 rounded-2xl shadow">
+    <h2 class="text-xl font-bold">Login</h2>
+    <form id="loginForm" class="mt-4 flex gap-3 flex-col sm:flex-row">
+      <input id="loginName" class="px-3 py-2 border rounded w-full" placeholder="Benutzername">
+      <button class="px-4 py-2 bg-blue-600 text-white rounded">Login</button>
+    </form>
+    <p class="text-sm text-gray-500 mt-2">Thomas (Plus), Samuel (Plus), Neal, Aaron</p>
+  </div>
 </section>
 
-<div class="divider"></div>
+<section id="main" class="max-w-7xl mx-auto px-6 py-10 hidden">
+  <div class="grid lg:grid-cols-2 gap-8">
 
-<section class="features fade">
-    <div class="card">
-        <h3>Ultra Clean UI</h3>
-        <p>Sieht aus wie 3025, fühlt sich aber leichter an als dein Minecraft-Inventar.</p>
+    <div class="bg-white p-6 rounded-2xl shadow">
+      <h3 class="text-xl font-bold">Deine Punkte</h3>
+      <p class="mt-2 text-gray-600">Punkte durch QR-Code nach Rückgabe.</p>
+      <div class="mt-4 text-3xl font-extrabold text-blue-600" id="pointCount">0</div>
+
+      <button id="openContainer" class="mt-6 px-4 py-2 bg-green-600 text-white rounded w-full">Becher in Container werfen</button>
     </div>
 
-    <div class="card">
-        <h3>Maximale Geschwindigkeit</h3>
-        <p>Lädt schneller als du "Lag?" sagen kannst.</p>
+    <div class="bg-white p-6 rounded-2xl shadow">
+      <h3 class="text-xl font-bold">Profil</h3>
+      <div class="flex items-center gap-4 mt-4">
+        <div class="w-16 h-16 rounded-full bg-gray-200 flex items-center justify-center text-xl font-bold" id="avatar">U</div>
+        <div>
+          <div id="profileName" class="font-semibold text-lg">User</div>
+          <div class="text-sm text-gray-600">Level: <span id="profileLevel">Standard</span></div>
+        </div>
+      </div>
+      <div id="plusInfo" class="mt-4 hidden bg-green-50 border border-green-200 p-3 rounded">
+        <p class="text-sm">Elepfand+ aktiv – 10% Bonuspunkte</p>
+      </div>
     </div>
+  </div>
 
-    <div class="card">
-        <h3>Smart Funktionen</h3>
-        <p>Mehr Features als dein Lieblings-Modpack.</p>
+  <section class="mt-10">
+    <h3 class="text-2xl font-bold">Rewards Shop</h3>
+    <div class="grid md:grid-cols-3 gap-6 mt-6">
+      <div class="bg-white p-4 rounded-xl shadow">
+        <h4 class="font-semibold">Gratis Getränk</h4>
+        <p class="text-sm text-gray-600">50 Punkte</p>
+        <button data-cost="50" class="buyBtn mt-3 px-4 py-2 bg-blue-600 text-white rounded w-full">Einlösen</button>
+      </div>
+      <div class="bg-white p-4 rounded-xl shadow">
+        <h4 class="font-semibold">Thermobecher</h4>
+        <p class="text-sm text-gray-600">700 Punkte</p>
+        <button data-cost="700" class="buyBtn mt-3 px-4 py-2 bg-blue-600 text-white rounded w-full">Einlösen</button>
+      </div>
+      <div class="bg-white p-4 rounded-xl shadow">
+        <h4 class="font-semibold">Elepfand+</h4>
+        <p class="text-sm text-gray-600">2500 Punkte</p>
+        <button data-cost="2500" class="buyBtn mt-3 px-4 py-2 bg-blue-600 text-white rounded w-full">Einlösen</button>
+      </div>
     </div>
-
-    <div class="card">
-        <h3>Premium Icons</h3>
-        <p>Alles crispy, alles glänzt, alles smooth. Genau wie du’s willst.</p>
-    </div>
+  </section>
 </section>
 
-<div class="divider"></div>
-
-<section class="gallery fade">
-    <h2>Galerie</h2>
-    <p>Hier ein paar vibes.</p>
-
-    <div class="gallery-grid">
-        <img src="elepfand.PNG" alt="Bild 1" />
-        <img src="elepfand.PNG" alt="Bild 2" />
-        <img src="elepfand.PNG" alt="Bild 3" />
-        <img src="elepfand.PNG" alt="Bild 4" />
-    </div>
+<section id="qrcode" class="qr-section max-w-7xl mx-auto px-6 py-20 hidden">
+  <h2 class="text-2xl font-bold text-center">QR scannen – Punkte erhalten</h2>
+  <p class="text-gray-600 text-center mt-2">Richte deine Kamera auf den QR-Code.</p>
+  <div id="qr-reader" style="width:320px; margin:30px auto;"></div>
+  <div id="qr-result" class="text-center font-bold text-lg mt-4"></div>
 </section>
 
-<footer>
-    © 2025 Elepfand All Rights Reserved
-</footer>
+<script src="https://unpkg.com/html5-qrcode"></script>
+<script>
+const USERS = {
+  Thomas:{plus:true,points:2600},
+  Samuel:{plus:true,points:1500},
+  Neal:{plus:false,points:34},
+  Aaron:{plus:false,points:80}
+};
 
+let state = {};
+
+function renderUser(){
+  document.getElementById("avatar").textContent = state.name.charAt(0).toUpperCase();
+  document.getElementById("profileName").textContent = state.name;
+  document.getElementById("profileLevel").textContent = state.plus ? "Elepfand+" : "Standard";
+  document.getElementById("pointCount").textContent = state.points;
+  document.getElementById("plusInfo").style.display = state.plus ? "block" : "none";
+}
+
+document.getElementById("loginForm").addEventListener("submit", e=>{
+  e.preventDefault();
+  const name = loginName.value.trim();
+  if(!USERS[name]) return alert("Benutzer nicht gefunden!");
+  state = {...USERS[name], name};
+  document.getElementById("main").classList.remove("hidden");
+  renderUser();
+});
+
+document.getElementById("openContainer").onclick = ()=>{
+  window.location.hash = "#qrcode";
+  document.getElementById("qrcode").classList.remove("hidden");
+  document.getElementById("qrcode").scrollIntoView({behavior:"smooth"});
+  startScanner();
+};
+
+function startScanner(){
+  const qrReader = new Html5Qrcode("qr-reader");
+  const config = { fps: 10, qrbox: 250 };
+
+  qrReader.start(
+    { facingMode: "environment" },
+    config,
+    qrMsg => {
+      document.getElementById("qr-result").innerText = "Gefunden: " + qrMsg;
+
+      if(qrMsg.includes("noahistdumm.github.io/Elepfand#qrcode")){
+        let pts = 5;
+        if(state.plus) pts = Math.floor(pts * 1.1);
+        state.points += pts;
+        renderUser();
+        alert(`+${pts} Punkte erhalten!`);
+        qrReader.stop();
+      }
+    },
+    ()=>{}
+  );
+}
+
+document.querySelectorAll('.buyBtn').forEach(btn=>{
+  btn.onclick = ()=>{
+    const cost = parseInt(btn.dataset.cost);
+    if(state.points >= cost){
+      state.points -= cost;
+      renderUser();
+      alert("Belohnung eingelöst!");
+    } else alert("Nicht genug Punkte.");
+  };
+});
+</script>
 </body>
 </html>
+
 
 
 
