--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Elepfand V2.5 Demo</title>
+  <title>Elepfand V2.6 Demo</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;800&display=swap" rel="stylesheet">
   <style>
@@ -15,6 +15,14 @@
       border-radius:50%;
       pointer-events:none;
     }
+    .points-flash{
+      animation: flash 0.5s;
+    }
+    @keyframes flash{
+      0%{background-color:transparent;}
+      50%{background-color:yellow;}
+      100%{background-color:transparent;}
+    }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-900">
@@ -22,7 +30,7 @@
 <header class="bg-white shadow sticky top-0 z-50">
   <div class="max-w-7xl mx-auto px-6 py-4 flex items-center gap-3">
     <img src="elepfand.PNG" class="w-12 h-12 rounded" onerror="this.style.display='none'">
-    <h1 class="text-2xl font-extrabold">Elepfand V2.5</h1>
+    <h1 class="text-2xl font-extrabold">Elepfand V2.6</h1>
   </div>
 </header>
 
@@ -39,12 +47,15 @@
 
 <section id="main" class="max-w-7xl mx-auto px-6 py-10 hidden">
   <div class="grid lg:grid-cols-2 gap-8">
-    <div class="bg-white p-6 rounded-2xl shadow">
+    <div class="bg-white p-6 rounded-2xl shadow relative">
       <h3 class="text-xl font-bold">Deine Punkte</h3>
       <p class="mt-2 text-gray-600">Punkte durch QR-Code nach Rückgabe.</p>
       <div class="mt-4 text-3xl font-extrabold text-blue-600" id="pointCount">0</div>
+
       <button id="addCup" class="mt-6 px-4 py-2 bg-purple-600 text-white rounded w-full">Becher hinzufügen</button>
       <button id="scanAll" class="mt-2 px-4 py-2 bg-green-600 text-white rounded w-full">QR-Code scannen & Punkte holen</button>
+      <button id="repeatScan" class="mt-2 px-4 py-2 bg-orange-600 text-white rounded w-full hidden">Scan wiederholen</button>
+
       <div id="cupCount" class="mt-2 text-gray-600">Gesammelte Becher: 0</div>
       <div id="lastPoints" class="mt-2 text-gray-600">Zuletzt erhalten: 0 Punkte</div>
     </div>
@@ -104,6 +115,7 @@ const USERS = {
 
 let state = {};
 let cupCount = 0;
+let qrReaderInstance = null;
 
 function renderUser(){
   document.getElementById("avatar").textContent = state.name.charAt(0).toUpperCase();
@@ -135,29 +147,40 @@ document.getElementById("scanAll").onclick = () => {
   document.getElementById("qrcode").classList.remove("hidden");
   document.getElementById("qrcode").scrollIntoView({ behavior: "smooth" });
   startScanner();
+  document.getElementById("repeatScan").classList.remove("hidden");
+};
+
+// Wiederholungs-Scan
+document.getElementById("repeatScan").onclick = () => {
+  startScanner();
 };
 
 // QR Scanner Funktion
 function startScanner() {
-  const qrReader = new Html5Qrcode("qr-reader");
+  if(qrReaderInstance) qrReaderInstance.stop().catch(()=>{});
+  qrReaderInstance = new Html5Qrcode("qr-reader");
   const config = { fps: 10, qrbox: 250 };
 
-  qrReader.start(
+  qrReaderInstance.start(
     { facingMode: "environment" },
     config,
     qrMsg => {
-      document.getElementById("qr-result").innerText = "Gefunden: " + qrMsg;
-
       if(qrMsg.toLowerCase().includes("qr.link/2w98nl")){
         let pts = 5 * cupCount;
         if(state.plus) pts = Math.floor(pts * 1.1);
         state.points += pts;
         renderUser();
         document.getElementById("lastPoints").textContent = `Zuletzt erhalten: ${pts} Punkte`;
+
+        // Punkte Flash
+        const pointBox = document.getElementById("pointCount");
+        pointBox.classList.add("points-flash");
+        setTimeout(()=>pointBox.classList.remove("points-flash"),500);
+
         confettiBlast();
         cupCount = 0;
         document.getElementById("cupCount").textContent = "Gesammelte Becher: 0";
-        qrReader.stop();
+        qrReaderInstance.stop();
       }
     },
     ()=>{}
@@ -193,6 +216,7 @@ document.querySelectorAll('.buyBtn').forEach(btn=>{
 </script>
 </body>
 </html>
+
 
 
 
